--- a/sdle/templates/login.html
+++ b/sdle/templates/login.html
@@ -4,17 +4,16 @@
 
 <h1>Login Page</h1>
 
-<form class="flex-wrap d-flex flex-column box m-3 pb-3 box bg-dark" action="" method="post">
+<form action="/authenticate" method="post">
     <!-- Email input -->
     {% csrf_token %}
-    <h3>Sign In</h3>
-    <div class="form-outline mb-4">
+    <div class="form-outline">
       <input type="text" id="username" class="form-control" placeholder="Username" name="username" required/>
       <label class="form-label" for="username">Nome de utilizador</label>
     </div>
   
     <!-- Password input -->
-    <div class="form-outline mb-4">
+    <div class="form-outline">
       <input type="password" id="pass" class="form-control" placeholder="********" name="pass" required/>
       <label class="form-label" for="pass">Palavra-passe</label>
       {% for message in messages %}
@@ -23,7 +22,7 @@
     </div>
     
     <!-- Submit button -->
-    <button type="submit" class="btn btn-warning btn-block mb-4">Sign in</button>
+    <button type="submit" >Sign in</button>
   </form>
 
 {% endblock page %}
