--- a/sdle/templates/common/base.html
+++ b/sdle/templates/common/base.html
@@ -18,10 +18,10 @@ page content is filled inside the page block
         <link rel="stylesheet" href="{% static './style.css' %}"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        
+        <script src="{% static './scripts.js' %}"></script>
         {% csrf_token %}
     </head>
-    <body>        
+    <body>
         {% block page %}
         {% endblock page %}
 
