--- a/sdle/templates/starter/listItem.html
+++ b/sdle/templates/starter/listItem.html
@@ -1,5 +1,5 @@
 <div id="{{ list.hash }}" class="d-flex justify-content-between w-100">
     <a href="list/{{list.hash}}">{{list.title}}</a>
     
-    <button id="shareHash{{list.hash}}" onclick='copyHash("{{list.hash}}")''>Share</button>
+    <button id="shareHash{{list.hash}}" onclick='copyHash("{{list.hash}}")'>Share</button>
 </div>
