--- a/sdle/templates/listPage/listItem.html
+++ b/sdle/templates/listPage/listItem.html
@@ -1,5 +1,5 @@
-<div id="{{ item.id }}" class="d-flex justify-content-between w-100">
+<div id="{{ item.hash }}" class="d-flex justify-content-between w-100">
     <h3>{{item.title}}</h3>
-    <input id="count_{{item.id}}" type="number" class="cnt"
-    min="0" value="{{item.count}}" autocomplete="off"></input>
+    <input id="count_{{item.hash}}" type="number" class="cnt"
+    min="0" value="{{item.cnt}}" autocomplete="off"></input>
 </div>
