can add and remove

--- a/sdle/templates/listPage/listItem.html
+++ b/sdle/templates/listPage/listItem.html
@@ -1,5 +1,5 @@
-<div id="{{ item.hash }}" class="d-flex justify-content-between w-100">
+<div id="{{ item.title }}" class="d-flex justify-content-between w-100">
     <h3>{{item.title}}</h3>
-    <input id="count_{{item.hash}}" type="number" class="cnt"
+    <input id="count_{{item.title}}" type="number" class="cnt"
     min="0" value="{{item.cnt}}" autocomplete="off"></input>
 </div>
