--- a/local/templates/index.html
+++ b/local/templates/index.html
@@ -7,6 +7,12 @@
     <h1 class="mb-5 mt-5">Available Lists</h1>
     <div class="d-flex align-items-center justify-content-center">
         <div class="w-75">
+            <form id="proxyForm" method="POST" action="/setProxy" class="d-flex justify-content-between">
+                {% csrf_token %}
+                <h3 class="w-25 border-0 mb-2 rounded" style="background-color: #f4f6f7;">Proxy IP: {{proxy}}</h3>
+                <input type="text" name="host" required class="w-50"></input>
+                <input type="submit" value="Set IP" class="w-25"></input>
+            </form>
             <form id="connectListForm" method="POST" action="/connectList" class="d-flex justify-content-between">
                 {% csrf_token %}
                 <h3 class="w-25 border-0 mb-2 rounded" style="background-color: #f4f6f7;">Hash:</h3>
