local frontend polling

--- a/local/templates/listPage/listItem.html
+++ b/local/templates/listPage/listItem.html
@@ -1,4 +1,4 @@
-<div id="{{ item.title }}" class="d-flex justify-content-between w-100">
+<div id="{{ item.title }}" class="d-flex justify-content-between w-100 listItem">
     <h3>{{item.title}}</h3>
     <input id="count_{{item.title}}" type="number" class="cnt"
     min="0" value="{{item.cnt}}" autocomplete="off"></input>
