--- a/local/templates/listPage.html
+++ b/local/templates/listPage.html
@@ -12,6 +12,10 @@
     <h1 class="mb-5 mt-5">List: {{list.title}}</h1>
     <div class="d-flex align-items-center justify-content-center">
         <div class="w-75">
+            <div id="onlineCheckForm" style="font-size:1.5em">
+                {% csrf_token %}
+                <input id="onlineCheck" checked=checked type="checkbox" style="height:1em; width:1em;">Online</input>
+            </div>
             <form id="newItemForm" method="Post" action="/newItem" class="d-flex justify-content-between">
                 {% csrf_token %}
                 <h3 class="w-25 border-0 mb-2 rounded" style="background-color: #f4f6f7;">Item Title:</h3>
